mejora version movil

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <img src="images/logo-digisol-full.png" alt="Digisoft Logo" style="height: 45px; vertical-align: middle;">
-                </div>
-                <ul>
+                <a href="#inicio" class="logo">
+                    <img src="images/logo-digisol-full.png" alt="Digisoft Logo" style="height: 40px; vertical-align: middle;">
+                </a>
+                <button class="hamburger" aria-label="Menú">
+                    <span></span><span></span><span></span>
+                </button>
+                <ul class="nav-links">
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#modulos">Módulos</a></li>
                     <li><a href="#pricing">Precios</a></li>
