--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <link rel="apple-touch-icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/banner.css">
 </head>
 <body>
+    <!-- BANNER DE ANUNCIO - Precio de Lanzamiento -->
+    <div class="announcement-banner">
+        <div class="announcement-banner__content">
+            <span class="announcement-banner__badge">Oferta limitada</span>
+            <p class="announcement-banner__text">
+                <strong>Precio de lanzamiento</strong> disponible hasta el 1 de mayo de 2026. No te quedes sin tu descuento.
+            </p>
+            <a href="#pricing" class="announcement-banner__cta">Ver precios</a>
+        </div>
+    </div>
+
     <!-- HEADER -->
     <header>
         <div class="container">
