--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/hero-pricing-launch.css">
 </head>
 <body>
+    <!-- BARRA SUPERIOR FLOTANTE: Banner + Header -->
+    <div class="sticky-top-bar">
     <!-- BANNER DE ANUNCIO - Precio de Lanzamiento -->
     <div class="announcement-banner">
         <div class="announcement-banner__content">
@@ -45,6 +47,7 @@
             </nav>
         </div>
     </header>
+    </div><!-- .sticky-top-bar -->
 
     <!-- HERO SECTION -->
     <section class="hero" id="inicio">
