--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
                 <div class="footer-section">
                     <h4>Empresa</h4>
                     <ul>
-                        <li><a href="#">Acerca de Digisol</a></li>
-                        <li><a href="#">Nuestros Servicios</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="https://digisol.do/about/">Acerca de Digisol</a></li>
+                        <li><a href="https://digisol.do/services/">Nuestros Servicios</a></li>
+                        <li><a href="https://digisol.do/blog/">Blog</a></li>
+                        <li><a href="https://digisol.do/contact/">Contacto</a></li>
                     </ul>
                 </div>
 
